<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="velimir.quiz.QuizInfoActivity"
    android:background="@color/activityBackground">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quiz_info"
            android:textColor="@color/about_textColor"
            android:textSize="@dimen/about_TextSize"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/secondText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quiz_secondText"
            android:textColor="@color/about_textColor"
            android:textSize="@dimen/about_TextSize"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/thirdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quiz_thirdText"
            android:textColor="@color/about_textColor"
            android:textSize="@dimen/about_TextSize"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/fourthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quiz_fourthText"
            android:textColor="@color/about_textColor"
            android:textSize="@dimen/about_TextSize"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/fifthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quiz_fifthText"
            android:textAllCaps="false"
            android:textColor="@color/about_textColor"
            android:textSize="@dimen/about_TextSize"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/button_startPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/startButton"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/button_startPlayText"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/playButton"
        android:textStyle="bold|italic"
        android:onClick="onButtonStartPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
